main.css: Fix mobile view text overlap

--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,6 @@ a {
   transform: rotate(45deg);
   transition: border-width 150ms ease-in-out;
   margin: 0 auto;
-  /* position: absolute;
-  bottom: 25px; */
   left: 47.5vw;
 }
 
